v5.0.0/_sources/generated/pcdsdevices.lens.LensStack.rst.txt
pcdsdevices.lens.LensStack
==========================

.. currentmodule:: pcdsdevices.lens

.. autoclass:: LensStack

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - x (FCpt)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``{self.x_prefix}``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lens.LensStackBase`
    
        * - y (FCpt)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``{self.y_prefix}``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lens.LensStackBase`
    
        * - z (FCpt)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``{self.z_prefix}``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lens.LensStackBase`
    
        * - calib_z
          - :class:`~pcdsdevices.pseudopos.PseudoSingleInterface`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lens.LensStackBase`
    
        * - beam_size
          - :class:`~pcdsdevices.pseudopos.PseudoSingleInterface`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.lens.LensStackBase`
    

    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: align
    .. automethod:: check_single
    .. automethod:: configure
    .. automethod:: create_lens
    .. automethod:: describe
    .. automethod:: forward
    .. automethod:: get
    .. automethod:: inverse
    .. automethod:: move
    .. automethod:: move_single
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: read_lens
    .. automethod:: set
    .. automethod:: set_current_position
    .. automethod:: set_lens_set
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: to_pseudo_tuple
    .. automethod:: to_real_tuple
    .. automethod:: trigger
    .. automethod:: tweak
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: backup_path
    .. autoattribute:: composite_egu
    .. autoattribute:: concurrent
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: position
    .. autoattribute:: pseudo_positioners
    .. autoattribute:: real_position
    .. autoattribute:: real_positioners
    .. autoattribute:: sequential
    .. autoattribute:: settle_time
    .. autoattribute:: target
    .. autoattribute:: timeout
    
    